resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: wordpress-cha-rlesthom-as
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 11.4.3
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
  selector:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/component: primary
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-cha-rlesthom-as
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/version: 6.6.1
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Cluster"
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: wordpress
