resources/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-external
  namespace: wordpress-cha-rlesthom-as
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/version: 6.6.1
  annotations:
    external-dns.alpha.kubernetes.io/hostname: cha.rlesthom.as
    external-dns.alpha.kubernetes.io/target: rlesthom.as
    gethomepage.dev/href: https://cha.rlesthom.as
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Wordpress
    gethomepage.dev/group: Web
    gethomepage.dev/icon: wordpress
    gethomepage.dev/name: cha.rlesthom.as
    gethomepage.dev/pod-selector: ""
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($http_user_agent ~* "(AI2Bot|Ai2Bot-Dolma|aiHitBot|Amazonbot|Andibot|anthropic-ai|Applebot|Applebot-Extended|bedrockbot|Brightbot1.0|Bytespider|CCBot|ChatGPT-User|Claude-SearchBot|Claude-User|Claude-Web|ClaudeBot|cohere-ai|cohere-training-data-crawler|Cotoyogi|Crawlspace|Diffbot|DuckAssistBot|FacebookBot|Factset_spyderbot|FirecrawlAgent|FriendlyCrawler|Google-CloudVertexBot|Google-Extended|GoogleOther|GoogleOther-Image|GoogleOther-Video|GPTBot|iaskspider/2.0|ICC-Crawler|ImagesiftBot|im [...]
        return 403;
      }
      location = /.well-known/webfinger {
        auth_basic off;
        allow all;
        default_type text/plain;
        try_files $uri $uri/ /index.php?$args;
        break;
      }
      location ~* "^/.*admin" {
        deny all;
        return 403;
      }
spec:
  ingressClassName: "nginx-external"
  rules:
    - host: "cha.rlesthom.as"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wordpress
                port:
                  name: http
  tls:
    - hosts:
        - cha.rlesthom.as
      secretName: cha.rlesthom.as
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-internal
  namespace: wordpress-cha-rlesthom-as
  labels:
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/version: 6.6.1
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wp.crt.house
    gethomepage.dev/href: https://wp.crt.house/wp-admin/
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Wordpress Admin
    gethomepage.dev/group: Web
    gethomepage.dev/icon: wordpress
    gethomepage.dev/name: wp.crt.house
    gethomepage.dev/pod-selector: ""
    nginx.ingress.kubernetes.io/proxy-body-size: 80m
spec:
  ingressClassName: "nginx-internal"
  rules:
    - host: "wp.crt.house"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: wordpress
                port:
                  name: http
  tls:
    - hosts:
        - wp.crt.house
